--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -15,30 +15,14 @@ COPY . .
 # Собираем приложение
 RUN npm run build
 
-# Этап для запуска приложения - используем этот образ для Railway
-FROM node:18-alpine
-
-WORKDIR /app
-
-# Копируем собранные файлы и зависимости
-COPY --from=build /app/dist ./dist
-COPY --from=build /app/node_modules ./node_modules
-COPY --from=build /app/package.json ./
-
-# Открываем порт
-EXPOSE 3000
-
-# Запускаем приложение
-CMD ["npm", "start"]
-
-# Production stage
+# Production stage with Nginx
 FROM nginx:alpine
 
 # Copy built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
 # Copy nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
